objects/EUR_CRM_Service_Pack__c.object
<CustomObject>
    <description>PREU Data model</description>
    <fields>
        <fullName>EUR_CRM_Affiliate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associate Affiliate to Service Pack</description>
        <label>Affiliate</label>
        <referenceTo>EUR_CRM_Affiliate__c</referenceTo>
        <relationshipLabel>Service Packs</relationshipLabel>
        <relationshipName>EUR_CRM_Service_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country__c</fullName>
        <formula>IF(EUR_CRM_Country_Code__c == &apos;AT&apos;,&apos;Austria&apos;,
IF(EUR_CRM_Country_Code__c == &apos;CZ&apos;,&apos;Czech Republic&apos;,
IF(EUR_CRM_Country_Code__c == &apos;GB&apos;,&apos;United Kingdom&apos;,
IF(EUR_CRM_Country_Code__c == &apos;LT&apos;,&apos;Lithuania&apos;,
IF(EUR_CRM_Country_Code__c == &apos;LV&apos;,&apos;Latvia&apos;,
IF(EUR_CRM_Country_Code__c == &apos;SK&apos;,&apos;Slovakia&apos;,
IF(EUR_CRM_Country_Code__c == &apos;PRT&apos;,&apos;Portugal&apos;,
IF(EUR_CRM_Country_Code__c == &apos;EE&apos;,&apos;Estonia&apos;,
IF(EUR_CRM_Country_Code__c == &apos;DE&apos;,&apos;Germany&apos;,&apos;&apos;)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Segmentation__c</fullName>
        <label>Image Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Pack (EU)</label>
    <nameField>
        <label>Service Pack</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Packs (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Service_Pack</fullName>
        <active>true</active>
        <label>EUR AO Service Pack</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Service_Pack</fullName>
        <active>true</active>
        <label>EUR DE Service Pack</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Service_Pack</fullName>
        <active>true</active>
        <label>EUR EE Service Pack</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Service_Pack</fullName>
        <active>true</active>
        <label>EUR KE Service Pack</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Service_Pack</fullName>
        <active>true</active>
        <label>EUR LT Service Pack</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Service_Pack</fullName>
        <active>true</active>
        <label>EUR LV Service Pack</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_Service_Pack</fullName>
        <active>true</active>
        <label>EUR_PRT_Service_Pack</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>